# Websocket

./: .gitignore  pyproject.toml
chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_attachment_message_updated_at_and_more.py
root/: asgi.py  drf_settings.py  settings.py  urls.py
